# ambient-expense-agent

./: agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
app/: agent.py
deployment/terraform/cicd/: backend.tf
deployment/terraform/cicd/vars/: env.tfvars
deployment/terraform/single-project/: backend.tf
submission_frontend/: Dockerfile  main.py  pyproject.toml
tests/integration/: test_agent.py
